--- a/cmd/comet/comet-example.yml
+++ b/cmd/comet/comet-example.yml
@@ -1,20 +1,41 @@
+# grpc server
 rpcServer:
   host: :3109
+
+# grpc client
 rpcClient:
+  # 連線超時
   timeout: 1
+
+# websocket連線
 websocket:
   host:
     - :3102
+
+# 優化參數
 protocol:
+  # 先初始化多少個time.Timer(心跳機制用)
   timer: 16
+  # 每個time.Timer一開始能接收的TimerData數量(每個人心跳超時動作)
   timerSize: 1024
+  # 每一個連線開grpc channel 接收資料的緩充量，當寫的速度大於讀的速度這時會阻塞，透過調大此值可以有更多緩衝避免阻塞
   receiveProtoBuffer: 10
+  # 每一個連線開異步Proto結構緩型Pool的大小，跟client透過tcp or websocket傳遞資料做消費速度有關聯
+  # 由於寫的速度有可能大於讀的速度，這時會自行close此連線，透過調大此值可以有更多緩衝close
   clientProto: 5
+  # 連線後多久(秒)沒申請進入某房間就把連線close
   handshakeTimeout: 8
+
+# 分散紀錄各user連線相關結構
 bucket:
+  # 固定幾個bucket做分散
   size: 16
+  # 每個Bucket預先管理多少個user，不夠會自動加倍開
   channel: 500
+  # 每個Bucket一開始管理多少個房間，不夠會自動加倍開
   room: 100
+  # 每個Bucket開幾個goroutine併發做房間推送
   routineAmount: 5
+  # 每個goroutine推送管道最大緩衝量
   routineSize: 1024
 
