feat: 後台http server

--- a/cmd/logic/logic-example.yml
+++ b/cmd/logic/logic-example.yml
@@ -7,6 +7,13 @@ httpServer:
   host: :3111
   readTimeout: 1
   writeTimeout: 1
+
+# httpAdminServer
+httpAdminServer:
+  host: :3112
+  readTimeout: 1
+  writeTimeout: 1
+  
 # grpc server
 rpcServer:
   host: :3119
