feat: cors header開放 Authorization

--- a/cmd/logic/logic-example.yml
+++ b/cmd/logic/logic-example.yml
@@ -18,6 +18,7 @@ httpServer:
       - Content-Type
       - Keep-Alive
       - User-Agent
+      - Authorization
 
 # httpAdminServer
 httpAdminServer:
