--- a/cmd/logic/logic-example.yml
+++ b/cmd/logic/logic-example.yml
@@ -1,7 +1,3 @@
-# comet連線用戶心跳(秒)，timeout logic會清除在線紀錄
-# 一定要比redis.expire還小
-heartbeat: 240
-
 api:
   host: http://127.0.0.1:9000
 
@@ -30,23 +26,22 @@ httpAdminServer:
 rpcServer:
   host: :3119
 
-# redis server
+# redis config
 redis:
-  host: :6379
+  # redis host
+  addr: :6379
   # pool內最大連線總數
-  active: 2048
+  maxConns: 50
   # 最大保留的閒置連線數
-  idle: 1024
+  minIdleConns: 30
   # 建立連線超時多久(秒)後放棄
-  dialTimeout: 0.2
+  dialTimeout: 5s
   # read多久(秒)沒回覆則放棄
-  readTimeout: 0.5
+  readTimeout: 2s
   # write多久(秒)沒回覆則放棄
-  writeTimeout: 0.5
+  writeTimeout: 2s
   # 空閒連線多久(秒)沒做事就close
-  idleTimeout: 120
-  # redis過期時間(秒
-  expire: 1800
+  idleTimeout: 5m
 
 # kafka push
 kafka:
