--- a/test/config/logic.yml
+++ b/test/config/logic.yml
@@ -25,21 +25,20 @@ rpcServer:
 
 # redis server
 redis:
-  host: :6379
+  # redis host
+  addr: :6379
   # pool內最大連線總數
-  active: 2
+  maxConns: 50
   # 最大保留的閒置連線數
-  idle: 2
+  minIdleConns: 30
   # 建立連線超時多久(秒)後放棄
-  dialTimeout: 0.2
+  dialTimeout: 5s
   # read多久(秒)沒回覆則放棄
-  readTimeout: 0.5
+  readTimeout: 2s
   # write多久(秒)沒回覆則放棄
-  writeTimeout: 0.5
+  writeTimeout: 2s
   # 空閒連線多久(秒)沒做事就close
-  idleTimeout: 30
-  # redis過期時間(秒
-  expire: 60
+  idleTimeout: 5m
 
 # kafka push
 kafka:
