feat: database 改用gitlab.com/jetfueltw/cpw/micro

--- a/cmd/logic/logic-example.yml
+++ b/cmd/logic/logic-example.yml
@@ -1,3 +1,7 @@
+# comet連線用戶心跳(秒)，timeout logic會清除在線紀錄
+# 一定要比redis.expire還小
+heartbeat: 240
+
 api:
   host: http://127.0.0.1:9000
 
@@ -49,7 +53,7 @@ kafka:
   brokers:
     - 127.0.0.1:9092
 
-db:
+database:
   host: 127.0.0.1
   port: 3306
   database: alakazam
@@ -58,8 +62,16 @@ db:
   charset: utf8mb4
   collation: utf8mb4_unicode_ci
   # 最大連線總數
-  active: 1000
+  active: 100
   # 最大保留的閒置連線數
-  idle: 500
+  idle: 10
   # 空閒連線多久(秒)沒做事就close
-  idleTimeout: 120
+  idleTimeout: 2m
+  slave:
+    - slave1
+
+  slave1:
+    port: 3306
+
+
+
