feat: api 改用gitlab.com/jetfueltw/cpw/micro 套件

--- a/test/config/logic.yml
+++ b/test/config/logic.yml
@@ -2,6 +2,16 @@
 # 一定要比redis.expire還小
 heartbeat: 20
 
+# 三方應用接口 config
+api:
+  host: http://127.0.0.1:3005
+  # 最大連接數量
+  maxConns: 30
+  # 最大空閒連接數
+  maxIdleConns: 10
+  # 單一連線最多閒置多久
+  idleConnTimeout: 2m
+
 # httpServer
 httpServer:
   host: :3111
