--- a/test/config/logic.yml
+++ b/test/config/logic.yml
@@ -12,22 +12,28 @@ api:
   # 單一連線最多閒置多久
   idleConnTimeout: 2m
 
-# httpServer
-httpServer:
-  host: :3111
-  readTimeout: 1
-  writeTimeout: 1
+# http server
+http:
+  debug: true
+  addr: :3111
+  readTimeout: 1s
+  writeTimeout: 1s
   cors:
     origins:
       - '*'
     headers:
-      - '*'
+      - Origin
+      - Content-Type
+      - Keep-Alive
+      - User-Agent
+      - Authorization
 
-# httpAdminServer
-httpAdminServer:
-  host: :3112
-  readTimeout: 1
-  writeTimeout: 1
+# http admin server
+admin:
+  debug: true
+  addr: :3112
+  readTimeout: 1s
+  writeTimeout: 1s
 
 # grpc server
 rpcServer:
