--- a/test/config/logic.yml
+++ b/test/config/logic.yml
@@ -81,3 +81,31 @@ database:
 # comet連線用戶心跳(秒)，timeout logic會清除在線紀錄
 # 一定要比redis.expire還小
 heartbeat: 20
+
+log:
+  # 開啟debug模式只會紀錄Info Level以上的log
+  # 使用DPanic level時會Panic
+  debug: true
+  # 是否關閉log的輸出檔案代碼位置
+  disableCaller: true
+  # 是否關閉Warn Level(不包含)以上的stack trace message
+  disableStacktrace: true
+  # log採樣基數
+  sampling:
+    # 當前Sync log數量大於此數字就會開始採樣
+    initial: 10
+    # 採樣機率
+    thereafter: 1
+  # Error Level(包含) 以上的log是否單獨輸出
+  # 不跟Info Level(包含) 以下的log輸出在同一個位置
+  errorAloneOutput: true
+  # log位置
+  # 如果errorAloneOutput = true 則只會有Info Level(包含) 以下 log
+  # 反之則不限定Level
+  outputPaths:
+    - stderr
+  # error log位置
+  # 如果errorAloneOutput = true 則只會有Error Level(包含) 以上 log
+  # 反之則只會有log處理流程中如果有發生錯誤的log
+  errorOutputPaths:
+    - stderr
