--- a/docker/comet/Dockerfile
+++ b/docker/comet/Dockerfile
@@ -1,9 +1,12 @@
+ARG image
+
+FROM ${image} as base
 FROM alpine
 
 WORKDIR /usr/local/bin
 
 COPY docker-entrypoint.sh .
-COPY --from=alakazams_build:latest /comet .
+COPY --from=base /usr/local/bin/comet .
 
 RUN chmod +x docker-entrypoint.sh
 
