--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,8 @@ logic:
   stage: build_service
   script:
     - cd docker/logic
-    - docker build --build-arg image=$REGISTRY_IMAGE -t REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v} .
-    - docker push REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v}
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
@@ -42,8 +42,8 @@ comet:
   stage: build_service
   script:
     - cd docker/comet
-    - docker build --build-arg image=$REGISTRY_IMAGE -t REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v} .
-    - docker push REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v}
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
@@ -53,8 +53,8 @@ job:
   stage: build_service
   script:
     - cd docker/job
-    - docker build --build-arg image=$REGISTRY_IMAGE -t REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v} .
-    - docker push REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v}
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
@@ -64,8 +64,8 @@ admin:
   stage: build_service
   script:
     - cd docker/admin
-    - docker build --build-arg image=$REGISTRY_IMAGE -t REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v} .
-    - docker push REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
