--- a/docker/admin/Dockerfile
+++ b/docker/admin/Dockerfile
@@ -5,11 +5,8 @@ FROM alpine
 
 WORKDIR /usr/local/bin
 
-COPY docker-entrypoint.sh .
+COPY --from=base /usr/local/bin/admin.yml config.yml
 COPY --from=base /usr/local/bin/admin .
 
-RUN chmod +x docker-entrypoint.sh
-
-ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["admin", "-c", "config.yml"]
