--- a/docker/comet/Dockerfile
+++ b/docker/comet/Dockerfile
@@ -5,11 +5,7 @@ FROM alpine
 
 WORKDIR /usr/local/bin
 
-COPY docker-entrypoint.sh .
+COPY --from=base /usr/local/bin/comet.yml config.yml
 COPY --from=base /usr/local/bin/comet .
-
-RUN chmod +x docker-entrypoint.sh
-
-ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["comet", "-c", "config.yml"]
