--- a/docker/logic/Dockerfile
+++ b/docker/logic/Dockerfile
@@ -5,11 +5,7 @@ FROM alpine
 
 WORKDIR /usr/local/bin
 
-COPY docker-entrypoint.sh .
+COPY --from=base /usr/local/bin/logic.yml config.yml
 COPY --from=base /usr/local/bin/logic .
-
-RUN chmod +x docker-entrypoint.sh
-
-ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["logic", "-c", "config.yml"]
