--- a/config/admin-example.yml
+++ b/config/admin-example.yml
@@ -10,7 +10,7 @@ redis:
   # redis host
   addr: :6379
   # redis password
-  password:
+  password: ""
   # pool內最大連線總數
   maxConns: 5
   # 最大保留的閒置連線數
