--- a/config/logic-example.yml
+++ b/config/logic-example.yml
@@ -33,7 +33,7 @@ redis:
   # redis host
   addr: :6379
   # redis password
-  password:
+  password: ""
   # pool內最大連線總數
   maxConns: 50
   # 最大保留的閒置連線數
