--- a/models/fixtures/rooms.yml
+++ b/models/fixtures/rooms.yml
@@ -4,5 +4,6 @@
   day_limit: 1
   deposit_limit: 100
   dml_limit: 1000
+  status: 1
   update_at: 2019-06-26 13:52:32
   create_at: 2019-06-26 13:52:32
