--- a/config/comet-example.yml
+++ b/config/comet-example.yml
@@ -1,7 +1,7 @@
 grpc:
   server:
     addr: :3109
-  client:
+  logic:
     addr: :3119
 
 # websocket連線
@@ -38,7 +38,7 @@ bucket:
 log:
   # 開啟debug模式只會紀錄Info Level以上的log
   # 使用DPanic level時會Panic
-  debug: true
+  debug: false
   # 是否關閉log的輸出檔案代碼位置
   disableCaller: true
   # 是否關閉Warn Level(不包含)以上的stack trace message
