--- a/config/message-example.yml
+++ b/config/message-example.yml
@@ -31,7 +31,7 @@ database:
 log:
   # 開啟debug模式只會紀錄Info Level以上的log
   # 使用DPanic level時會Panic
-  debug: true
+  debug: false
   # 是否關閉log的輸出檔案代碼位置
   disableCaller: true
   # 是否關閉Warn Level(不包含)以上的stack trace message
