--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ services:
 stages:
   - build
   - build_service
+  - deploy_develop
 
 variables:
   REGISTRY_IMAGE: $CI_REGISTRY_IMAGE:latest
@@ -13,6 +14,8 @@ variables:
   REGISTRY_COMET_IMAGE: $CI_REGISTRY_IMAGE/comet
   REGISTRY_JOB_IMAGE: $CI_REGISTRY_IMAGE/job
   REGISTRY_ADMIN_IMAGE: $CI_REGISTRY_IMAGE/admin
+  REGISTRY_MESSAGE_IMAGE: $CI_REGISTRY_IMAGE/message
+  REGISTRY_SEQ_IMAGE: $CI_REGISTRY_IMAGE/seq
 
 before_script:
   - echo "$CI_REGISTRY_PASSWORD" | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
@@ -66,6 +69,48 @@ admin:
     - cd docker/admin
     - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v} .
     - docker push $REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
+  only:
+    - /^v\d+\.\d+\.\d+$/
+  except:
+    - branches
+
+message:
+  stage: build_service
+  script:
+    - cd docker/message
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v}
+  only:
+    - /^v\d+\.\d+\.\d+$/
+  except:
+    - branches
+
+seq:
+  stage: build_service
+  script:
+    - cd docker/seq
+    - docker build --build-arg image=$REGISTRY_IMAGE -t $REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v} .
+    - docker push $REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v}
+  only:
+    - /^v\d+\.\d+\.\d+$/
+  except:
+    - branches
+
+deploy_develop:
+  stage: deploy
+  image: jetfueltw/kubectl:latest
+  before_script:
+    - kubectl config set-cluster kubernetes --server=$DEV_K8S_SERVER --certificate-authority=$DEV_K8S_CERTIFICATE
+    - kubectl config set-credentials gitlab-admin --token=$DEV_K8S_USER_TOKEN
+    - kubectl config set-context gitlab-admin@kubernetes --cluster=kubernetes --user=gitlab-admin --namespace=cpw
+    - kubectl config use-context gitlab-admin@kubernetes
+  script:
+    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-logic=$REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v}
+    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-comet=$REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v}
+    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-job=$REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v}
+    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-admin=$REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
+#    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-message=$REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v}
+#    - kubectl set image deployment/$CI_PROJECT_NAME-deployment $CI_PROJECT_NAME-seq=$REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
