--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,8 +109,8 @@ deploy_develop:
     - kubectl set image deployment/$CI_PROJECT_NAME-comet-deployment $CI_PROJECT_NAME-comet=$REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v}
     - kubectl set image deployment/$CI_PROJECT_NAME-job-deployment $CI_PROJECT_NAME-job=$REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v}
     - kubectl set image deployment/$CI_PROJECT_NAME-admin-deployment $CI_PROJECT_NAME-admin=$REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
-  #    - kubectl set image deployment/$CI_PROJECT_NAME-message-deployment $CI_PROJECT_NAME-message=$REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v}
-  #    - kubectl set image deployment/$CI_PROJECT_NAME-seq-deployment $CI_PROJECT_NAME-seq=$REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v}
+    - kubectl set image deployment/$CI_PROJECT_NAME-message-deployment $CI_PROJECT_NAME-message=$REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v}
+    - kubectl set image deployment/$CI_PROJECT_NAME-seq-deployment $CI_PROJECT_NAME-seq=$REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v}
   only:
     - /^v\d+\.\d+\.\d+$/
   except:
