feat: 默認不打開http debug

--- a/config/admin-example.yml
+++ b/config/admin-example.yml
@@ -1,6 +1,6 @@
 # http admin server
 http:
-  debug: true
+  debug: false
   addr: :3112
   readTimeout: 1s
   writeTimeout: 1s
@@ -69,7 +69,7 @@ database:
 log:
   # 開啟debug模式只會紀錄Info Level以上的log
   # 使用DPanic level時會Panic
-  debug: true
+  debug: false
   # 是否關閉log的輸出檔案代碼位置
   disableCaller: true
   # 是否關閉Warn Level(不包含)以上的stack trace message
