feat: 發訊息不需要帶uid跟key

--- a/config/logic-example.yml
+++ b/config/logic-example.yml
@@ -20,6 +20,9 @@ grpc:
   seq:
     addr: :3120
 
+jwt:
+  authSecret: AxQxVJ3bEqLvzzWejkFxrhKkavQhY4Am
+
 # 三方應用接口 config
 nidoran:
   host: http://127.0.0.1:3005
