--- a/config/message-example.yml
+++ b/config/message-example.yml
@@ -28,6 +28,25 @@ database:
     idle: 4
     idleTimeout: 5m
 
+# redis server
+redis:
+  # redis host
+  addr: :6379
+  # redis password
+  password: ""
+  # pool內最大連線總數
+  maxConns: 8
+  # 最大保留的閒置連線數
+  minIdleConns: 4
+  # 建立連線超時多久(秒)後放棄
+  dialTimeout: 2s
+  # read多久(秒)沒回覆則放棄
+  readTimeout: 2s
+  # write多久(秒)沒回覆則放棄
+  writeTimeout: 2s
+  # 空閒連線多久(秒)沒做事就close
+  idleTimeout: 5m
+
 log:
   # 開啟debug模式只會紀錄Info Level以上的log
   # 使用DPanic level時會Panic
