fix: panic: unknown time zone Asia/Shanghai

--- a/docker/message/Dockerfile
+++ b/docker/message/Dockerfile
@@ -5,6 +5,7 @@ FROM alpine
 
 WORKDIR /usr/local/bin
 
+COPY --from=base /usr/local/go/lib/time/zoneinfo.zip /usr/local/go/lib/time/zoneinfo.zip
 COPY --from=base /usr/local/bin/message.yml config.yml
 COPY --from=base /usr/local/bin/message .
 
