--- a/config/logic-example.yml
+++ b/config/logic-example.yml
@@ -85,6 +85,9 @@ database:
 # 一定要比redis.expire還小
 heartbeat: 240
 
+metrics:
+  addr: :3030
+
 log:
   # 開啟debug模式只會紀錄Info Level以上的log
   # 使用DPanic level時會Panic
