--- a/metrics/prometheus-example.yml
+++ b/metrics/prometheus-example.yml
@@ -43,3 +43,7 @@ scrape_configs:
   - job_name: 'admin'
     static_configs:
       - targets: ['127.0.0.1:3035']
+
+  - job_name: 'kafka_broker'
+    static_configs:
+      - targets: ['127.0.0.1:3036']
