--- a/metrics/prometheus-example.yml
+++ b/metrics/prometheus-example.yml
@@ -1,7 +1,7 @@
 # my global config
 global:
-  scrape_interval:     15s # 設定每15s取一次資料，默認是1m取一次  
-  evaluation_interval: 15s # 設定每15s評估一次規則，默認是1m取一次  
+  scrape_interval:     30s # 設定每15s取一次資料，默認是1m取一次
+  evaluation_interval: 30s # 設定每15s評估一次規則，默認是1m取一次
   scrape_timeout: 5s # 設定取資料超時
 
 # Alertmanager configuration
@@ -9,7 +9,7 @@ alerting:
   alertmanagers:
     - static_configs:
       - targets:
-          # - alertmanager:9093
+    # - alertmanager:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
@@ -47,3 +47,7 @@ scrape_configs:
   - job_name: 'kafka_broker_jmx'
     static_configs:
       - targets: ['127.0.0.1:3036']
+
+  - job_name: 'kafka_consumer_lag'
+    static_configs:
+      - targets: ['127.0.0.1:3037']
