增加burrow做kafka consumer lag 監控

--- a/docker/docker-compose/.env.example
+++ b/docker/docker-compose/.env.example
@@ -74,3 +74,7 @@ MIG_ALAKAZAM_DB_PORT=3306
 MIG_ALAKAZAM_DB_DATABASE=alakazam
 MIG_ALAKAZAM_DB_USERNAME=root
 MIG_ALAKAZAM_DB_PASSWORD=root
+
+#### prometheus ####
+BURROW_ADDR=burrow:8080
+PROMETHEUS_INTERVAL=30s
