調整監控參數

--- a/docker/docker-compose/.env.example
+++ b/docker/docker-compose/.env.example
@@ -78,3 +78,4 @@ MIG_ALAKAZAM_DB_PASSWORD=root
 #### prometheus ####
 BURROW_ADDR=burrow:8080
 PROMETHEUS_INTERVAL=30s
+KAFKA_JMX_SERVER_HOST=127.0.0.1
