--- a/docker/docker-compose/metrics/prometheus-example.yml
+++ b/docker/docker-compose/metrics/prometheus-example.yml
@@ -8,7 +8,7 @@ global:
 alerting:
   alertmanagers:
     - static_configs:
-      - targets:
+        - targets:
     # - alertmanager:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
@@ -20,34 +20,38 @@ rule_files:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+  - job_name: 'node'
+    static_configs:
+      - targets: ['127.0.0.1:9100']
+
   - job_name: 'logic'
     static_configs:
-      - targets: ['127.0.0.1:3030']
+      - targets: ['alakazam_logic:3030']
 
   - job_name: 'comet'
     static_configs:
-      - targets: ['127.0.0.1:3031']
+      - targets: ['alakazam:3031']
 
   - job_name: 'job'
     static_configs:
-      - targets: ['127.0.0.1:3032']
+      - targets: ['alakazam_job:3032']
 
   - job_name: 'message'
     static_configs:
-      - targets: ['127.0.0.1:3033']
+      - targets: ['alakazam_message:3033']
 
   - job_name: 'seq'
     static_configs:
-      - targets: ['127.0.0.1:3034']
+      - targets: ['alakazam_seq:3034']
 
   - job_name: 'admin'
     static_configs:
-      - targets: ['127.0.0.1:3035']
+      - targets: ['alakazam_admin:3035']
 
   - job_name: 'kafka_broker_jmx'
     static_configs:
-      - targets: ['127.0.0.1:3036']
+      - targets: ['kafka:3036']
 
   - job_name: 'kafka_consumer_lag'
     static_configs:
-      - targets: ['127.0.0.1:3037']
+      - targets: ['burrow_prometheus:3037']
