--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -78,7 +78,7 @@ services:
       - NIDORAN_DATABASE_HOST=${NIDORAN_DATABASE_HOST}
       - NIDORAN_DATABASE_PORT=${NIDORAN_DATABASE_PORT}
       - NIDORAN_DATABASE_USER=${NIDORAN_DATABASE_USER}
-      - NIDORAN_DATABASE_PASSWORD=${NIDORAN_DATABASE_PASSWORD}s
+      - NIDORAN_DATABASE_PASSWORD=${NIDORAN_DATABASE_PASSWORD}
       - NIDORAN_REDIS_ADDR=${NIDORAN_REDIS_ADDR}
       - NIDORAN_AUTH_HOST=${NIDORAN_RAPIDASH_HOST}
       - NIDORAN_WALLET_HOST=${NIDORAN_PONTTA_HOST}
