--- a/docker/docker-compose/.env.example
+++ b/docker/docker-compose/.env.example
@@ -79,3 +79,5 @@ MIG_ALAKAZAM_DB_PASSWORD=root
 BURROW_ADDR=burrow:8080
 PROMETHEUS_INTERVAL=30s
 KAFKA_JMX_SERVER_HOST=127.0.0.1
+BURROW_PROMETHEUS_VERSION=1.0.0
+
