--- a/docker/docker-compose/.env.example
+++ b/docker/docker-compose/.env.example
@@ -75,9 +75,12 @@ MIG_ALAKAZAM_DB_DATABASE=alakazam
 MIG_ALAKAZAM_DB_USERNAME=root
 MIG_ALAKAZAM_DB_PASSWORD=root
 
-#### prometheus ####
-BURROW_ADDR=burrow:8080
-PROMETHEUS_INTERVAL=30s
+#### kafka jmx ####
 KAFKA_JMX_SERVER_HOST=127.0.0.1
+
+#### prometheus ####
+PROMETHEUS_ADDR=:3037
+BURROW_ADDR=http://burrow:8080
+PROMETHEUS_INTERVAL=30s
 BURROW_PROMETHEUS_VERSION=1.0.0
 
