--- a/config/logic-example.yml
+++ b/config/logic-example.yml
@@ -105,3 +105,8 @@ log:
   # Error Level(包含) 以上的log是否單獨輸出
   # 不跟Info Level(包含) 以下的log輸出在同一個位置
   errorAloneOutput: true
+              
+#聊天室admin
+admin:
+  host: 127.0.0.1
+  port: 3112
