--- a/config/comet-example.yml
+++ b/config/comet-example.yml
@@ -55,3 +55,27 @@ log:
   # Error Level(包含) 以上的log是否單獨輸出
   # 不跟Info Level(包含) 以下的log輸出在同一個位置
   errorAloneOutput: true
+
+
+database:
+  host: 127.0.0.1
+  port: 3306
+  database: alakazam
+  user: root
+  password: root
+  charset: utf8mb4
+  collation: utf8mb4_unicode_ci
+  # 最大連線總數
+  active: 8
+  # 最大保留的閒置連線數
+  idle: 4
+  # 空閒連線多久(秒)沒做事就close
+  idleTimeout: 5m
+  slave:
+    host: 127.0.0.1
+    port: 3306
+    user: root
+    password: root
+    active: 8
+    idle: 4
+    idleTimeout: 5m
