--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,19 +98,43 @@ seq:
 
 deploy_develop:
   stage: deploy
-  image: jetfueltw/kubectl:latest
+  image: jetfueltw/kustomize:2.0.3
   before_script:
-    - kubectl config set-cluster kubernetes --server=$DEV_K8S_SERVER --certificate-authority=$DEV_K8S_CERTIFICATE
-    - kubectl config set-credentials gitlab-admin --token=$DEV_K8S_USER_TOKEN
-    - kubectl config set-context gitlab-admin@kubernetes --cluster=kubernetes --user=gitlab-admin --namespace=cpw
-    - kubectl config use-context gitlab-admin@kubernetes
+    - eval "$(ssh-agent -s)"
+    - echo "${DEV_K8S_CD_PRIVATE_KEY}" | ssh-add - > /dev/null
+    - git config --global user.email "devops@jetfuel.com.tw" && git config --global user.name "devops"
   script:
-    - kubectl set image deployment/$CI_PROJECT_NAME-logic-deployment $CI_PROJECT_NAME-logic=$REGISTRY_LOGIC_IMAGE:${CI_COMMIT_TAG#v}
-    - kubectl set image deployment/$CI_PROJECT_NAME-comet-deployment $CI_PROJECT_NAME-comet=$REGISTRY_COMET_IMAGE:${CI_COMMIT_TAG#v}
-    - kubectl set image deployment/$CI_PROJECT_NAME-job-deployment $CI_PROJECT_NAME-job=$REGISTRY_JOB_IMAGE:${CI_COMMIT_TAG#v}
-    - kubectl set image deployment/$CI_PROJECT_NAME-admin-deployment $CI_PROJECT_NAME-admin=$REGISTRY_ADMIN_IMAGE:${CI_COMMIT_TAG#v}
-    - kubectl set image deployment/$CI_PROJECT_NAME-message-deployment $CI_PROJECT_NAME-message=$REGISTRY_MESSAGE_IMAGE:${CI_COMMIT_TAG#v}
-    - kubectl set image deployment/$CI_PROJECT_NAME-seq-deployment $CI_PROJECT_NAME-seq=$REGISTRY_SEQ_IMAGE:${CI_COMMIT_TAG#v}
+    - cd ~/ && git clone git@gitlab.com:jetfueltw/devops/k8s.git
+    - cd ~/k8s && git checkout master
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/admin/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/comet/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/job/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/logic/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/message/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - cd ~/k8s/live/${CI_PROJECT_NAME}/seq/overlays/dev
+    - kustomize edit set image $CI_REGISTRY_IMAGE:${CI_COMMIT_TAG#v}
+    - cat kustomization.yaml
+
+    - git add -A
+    - git diff-index --quiet HEAD || git commit -m 'GitLab CI/CD - DEV image update'
+    - git pull --rebase origin master
+    - git push origin master
   only:
     - /^v\d+\.\d+\.\d+(-[\w-]+)?$/
   except:
