[revise] 新增paras 環境變數

--- a/docker/docker-compose/docker-compose.yml
+++ b/docker/docker-compose/docker-compose.yml
@@ -122,7 +122,10 @@ services:
       - ALAKAZAM_KAFKA_BROKERS=${ALAKAZAM_KAFKA_BROKERS}
       - ALAKAZAM_JWT_AUTHSECRET=AxQxVJ3bEqLvzzWejkFxrhKkavQhY4Am
       - ALAKAZAM_NIDORAN_HOST=${ALAKAZAM_NIDORAN_API_HOST}
+      - ALAKAZAM_PARAS_HOST=${ALAKAZAM_PARAS_API_HOST}
       - ALAKAZAM_GRPC_SEQ_ADDR=alakazam_seq:3120
+
+      
     ports:
       - "${ALAKAZAM_LOGIC_API_PORT}:3111"
       - "3030:3030"
