--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
-image: docker:latest
+image: docker
 
 services:
-  - docker:dind
+  - docker:20-dind
 
 stages:
   - build
@@ -9,6 +9,10 @@ stages:
   - deploy
 
 variables:
+  APP_NAME: alakazam
+  DOCKER_HOST: tcp://localhost:2375
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
   REGISTRY_IMAGE: $CI_REGISTRY_IMAGE:latest
   REGISTRY_LOGIC_IMAGE: $CI_REGISTRY_IMAGE/logic
   REGISTRY_COMET_IMAGE: $CI_REGISTRY_IMAGE/comet
@@ -18,7 +22,9 @@ variables:
   REGISTRY_SEQ_IMAGE: $CI_REGISTRY_IMAGE/seq
 
 before_script:
-  - echo "$CI_REGISTRY_PASSWORD" | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+  - export IMAGE=$CI_REGISTRY/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME
+  - echo $IMAGE
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 build:
   stage: build
@@ -102,32 +108,32 @@ deploy_develop:
   before_script:
     - eval "$(ssh-agent -s)"
     - echo "${GIT_DEPLOY_PRIVATE_KEY}" | ssh-add - > /dev/null
-    - git config --global user.email "devops@jetfuel.com.tw" && git config --global user.name "devops"
+    - git config --global user.email "devops@h-tech.co" && git config --global user.name "devops"
   script:
-    - cd ~/ && git clone git@gitlab.com:jetfueltw/devops/xbb-live-k8s.git
-    - cd ~/xbb-live-k8s && git checkout main
+    - cd ~/ && git clone git@gitlab.com:ht-co/wowtch/devops/wowtch-k8s.git
+    - cd ~/wowtch-k8s && git checkout main
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/admin/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/admin/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/admin:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/comet/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/comet/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/comet:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/job/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/job/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/job:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/logic/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/logic/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/logic:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/message/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/message/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/message:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
-    - cd ~/xbb-live-k8s/live/${CI_PROJECT_NAME}/seq/overlays/dev
+    - cd ~/wowtch-k8s/live/${CI_PROJECT_NAME}/seq/overlays/dev
     - kustomize edit set image $CI_REGISTRY_IMAGE/seq:${CI_COMMIT_TAG#v}
     - cat kustomization.yaml
 
